# api-gateway

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  PRODUCTION_READINESS.md  README.md  SECURITY_HARDENING_IMPLEMENTATION.md  docker-compose.microservices.yml  libdeployment.rlib  simple_observability_test.rs  task13_left_overs.md  test_observability.rs
admin-dashboard/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
admin-dashboard/src/: App.tsx  index.css  main.tsx
benches/: hot_path_benchmarks.rs  performance_benchmarks.rs  performance_optimization_benchmarks.rs  rate_limiting_bench.rs  simple_performance_benchmarks.rs
config/: gateway.yaml  microservices-example.yaml  production-best-practices.yaml  production.yaml  staging.yaml  traffic-admin-example.yaml
docs/: admin-api.md  admin-dashboard-manual.md  admin-deployment.md  api.md  architecture.md  configuration.md  deployment.md  error-handling.md  microservices-integration.md  plugin-development.md  traffic-admin-api.md  troubleshooting.md
examples/: error_handling_integration.rs  security_demo.rs  traffic_admin_integration.rs
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml
monitoring/: grafana-dashboard.json  production-monitoring.yml  prometheus.yml
monitoring/alerts/: gateway-alerts.yml
scripts/: admin-deployment.sh  backup-admin.sh  build.sh  deploy-production.sh  deploy.sh  e2e-validation.sh  production-deploy-complete.sh
src/: auth.rs  config.rs  error.rs  lib.rs  load_balancer.rs  main.rs  middleware.rs  observability.rs  protocols.rs  router.rs  server.rs  service_discovery.rs  types.rs
src/admin/: api_foundation.rs  audit.rs  backup_recovery.rs  circuit_breaker.rs  compliance.rs  config_manager.rs  core_endpoints.rs  deployment.rs  endpoints.rs  error_tracking.rs  grpc_management.rs  health.rs  http_management.rs  k8s_management.rs  load_balancer.rs  logging.rs  metrics.rs  middleware.rs  mod.rs  observability.rs  performance.rs  rate_limiting.rs  security.rs  security_scanner.rs  service_management.rs  tracing.rs  transformation.rs  websocket_management.rs
src/auth/: admin.rs  middleware.rs  (+3 more)
tests/: admin_core_endpoints_tests.rs  admin_observability_tests.rs  admin_security_tests.rs  caching_integration_tests.rs  deployment_tests.rs  error_handling_tests.rs  grpc_integration_tests.rs  http_features_integration_test.rs  http_integration_tests.rs  k8s_integration_tests.rs  metrics_tests.rs  middleware_pipeline_tests.rs  performance_regression_tests.rs  rate_limiting_performance.rs  scaling_performance_tests.rs  security_hardening_tests.rs  traffic_admin_tests.rs  websocket_integration_tests.rs
(+90 files in other folders)
