[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["API Gateway Team"]
description = "A high-performance API Gateway built in Rust for containerized deployment"
license = "MIT"

[dependencies]
# Async runtime and core utilities
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

# HTTP server framework and middleware
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# gRPC support
tonic = { version = "0.10", features = ["gzip", "tls"] }
prost = "0.12"

# WebSocket support
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"
futures = "0.3"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# HTTP client for upstream requests
reqwest = { version = "0.11", features = ["json", "stream"] }

# Authentication and security
jsonwebtoken = "9.2"
paseto = "2.0.2"
oauth2 = "4.4"
rustls = "0.22"
rustls-pemfile = "2.0"
base64 = "0.22"

# Service discovery
kube = { version = "0.87", features = ["client", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
consul = "0.4"
async-nats = "0.33"

# Caching and storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Metrics and observability
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"

# Configuration file watching
notify = "6.1"

# Human-readable time parsing
humantime = "2.1"

# URL parsing and routing
url = "2.5"
matchit = "0.7"
urlencoding = "2.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }
humantime-serde = "1.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# Hashing
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Compression
flate2 = "1.0"
brotli = "3.4"

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.15"
wiremock = "0.5"
tempfile = "3.8"
axum-test = "14.0"
futures = "0.3"
futures-util = "0.3.31"


